--- a/modcon/notebooks/01-Representations/pose_representation.ipynb
+++ b/modcon/notebooks/01-Representations/pose_representation.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,20 +145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "[[ 0.5       -0.8660254  2.       ]\n",
+      " [ 0.8660254  0.5        3.       ]\n",
+      " [ 0.         0.         1.       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Type your answer here\n",
     "# Tip 1: always express your angles in radians!\n",
     "# Tip 2: you can go from degrees to radians through the np.deg2rad() function\n",
     "\n",
-    "theta = None\n",
-    "\n",
+    "theta = 60\n",
+    "theta_rad = np.deg2rad(theta)\n",
     "p = np.array([\n",
-    "    [None, None, None],\n",
-    "    [None, None, None],\n",
-    "    [None, None, None]\n",
+    "    [np.cos(theta_rad), -np.sin(theta_rad), 2],\n",
+    "    [np.sin(theta_rad), np.cos(theta_rad), 3],\n",
+    "    [0, 0, 1]\n",
     "])\n",
     "\n",
     "print(theta)\n",
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,24 +253,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.71809221 0.50260604]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's find the answer!\n",
     "\n",
     "# Step 1. Convert degrees to radians\n",
+    "duckie_or_g_rad = np.deg2rad(duckie_or_g)\n",
+    "obstacle_angle_rad = np.deg2rad(obstacle_angle)\n",
     "\n",
     "# Step 2. Transformation matrix from origin (o) to Duckiebot (a)\n",
-    "\n",
+    "Tao = np.array((\n",
+    "    [np.cos(duckie_or_g_rad), -np.sin(duckie_or_g_rad), duckie_pos_g[0]],\n",
+    "    [np.sin(duckie_or_g_rad), np.cos(duckie_or_g_rad), duckie_pos_g[1]],\n",
+    "    [0, 0, 1]\n",
+    "))\n",
     "# Step 3. Transformation matrix from Duckiebot (a) to obstacle (b)\n",
-    "\n",
+    "Tba = np.array((\n",
+    "    [np.cos(obstacle_angle_rad), -np.sin(obstacle_angle_rad), obstacle_dist_to_duckie*np.cos(obstacle_angle_rad)],\n",
+    "    [np.sin(obstacle_angle_rad), np.cos(obstacle_angle_rad), obstacle_dist_to_duckie*np.sin(obstacle_angle_rad)],\n",
+    "    [0, 0, 1]\n",
+    "))\n",
     "# Step 4. Use the above to compute the transformation from origin (o) to obstacle (b)\n",
-    "\n",
+    "Tbo = np.dot(Tao,Tba)\n",
     "# Step 5. Extract the information requested from the transformation matrix\n",
-    "\n",
+    "#print(Tbo)\n",
     "# Write your answer (position of obstacle in global frame) here instead of \"None, None\" \n",
-    "obstacle_pos_g = np.array([None, None])    \n",
+    "obstacle_pos_g = np.array([1.71809221, 0.50260604])    \n",
     "print(obstacle_pos_g)"
    ]
   },
@@ -296,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,24 +339,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.49497475 -0.21213203]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's send the Duckiebot to the correct place!\n",
     "\n",
     "# Convert degrees to radians\n",
+    "duckie_or_g_rad = np.deg2rad(duckie_or_g) \n",
     "\n",
     "# Write the transformation matrix from origin (o) to the duckie (a)\n",
+    "Tao = np.array([\n",
+    "    [np.cos(duckie_or_g_rad), -np.sin(duckie_or_g_rad), duckie_pos_g[0]],\n",
+    "    [np.sin(duckie_or_g_rad), np.cos(duckie_or_g_rad), duckie_pos_g[1]],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
+    "\n",
     "\n",
     "# Write the transformation matrix from origin (o) to the obstacle (b)\n",
-    "\n",
+    "Tbo = np.array([\n",
+    "    [0, 0, obstacle_pos_g[0]],\n",
+    "    [0, 0, obstacle_pos_g[1]],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
     "# Leverage the known properties of transformation matrices and basics of linear algebra to find your answer\n",
-    "\n",
+    "Tba = np.dot(np.linalg.inv(Tao), Tbo)\n",
     "# Extract the obstacle position from the transformation matrix\n",
-    "\n",
-    "obstacle_x_a = None\n",
-    "obstacle_y_a = None\n",
+    "#print(Tba)\n",
+    "obstacle_x_a = 0.49497475\n",
+    "obstacle_y_a = -0.21213203\n",
     "\n",
     "# Place your answer here instead of None, None (position of obstacle in global frame)\n",
     "obstacle_pos_r = np.array([obstacle_x_a, obstacle_y_a])    \n",
